# monke-engine

./: .gitignore  .sconsign.dblite  CMakeLists.txt  LICENSE  Makefile  MangoHud.conf  README.md  SConstruct  compile.sh  dev.sh  imgui.ini  main.cpp
demo/: main.cpp
include/: animated_sprite.h  display.h  engine.h  file.h  input.h  log.h  opengl_object.h  resource_loader.h  shader.h  sprite.h  sprite_renderer.h  state_manager.h  texture.h  tickable.h  types.h
include/core/: collider.h  display.h  engine.h  input.h  resource_loader.h  shader.h  sprite.h  sprite_renderer.h  state_manager.h  types.h
include/monke/core/: batch_renderer.h  camera.h  debug.h  display.h  engine.h  imgui_helper.h  imgui_utils.h  input.h  log.h  renderer.h  resource_loader.h  shader.h  signal.h  sprite.h  sprite_renderer.h  texture.h  types.h
include/monke/types/: rect.h  vector2.h
include/types/: rect.h  vector2.h
readme/: README.md
shaders/: fragment.glsl  vertex.glsl
shaders/batch/: fragment.glsl  vertex.glsl
shaders/sprite/: vertex.glsl
src/: animated_sprite.cpp  display.cpp  engine.cpp  glad.cpp  input.cpp  main.cpp  resource_loader.cpp  shader.cpp  sprite.cpp  sprite_renderer.cpp  state_manager.cpp  texture.cpp
src/core/: batch_renderer.cpp  camera.cpp  collider.cpp  debug.cpp  display.cpp  engine.cpp  file.cpp  imgui_helper.cpp  imgui_utils.cpp  input.cpp  renderer.cpp  resource_loader.cpp  shader.cpp  signal.cpp  sprite.cpp  sprite_renderer.cpp  state_manager.cpp  texture.cpp  types.cpp
src/types/: vector2.cpp
